--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
   },
   "homepage": "https://github.com/egoist000/todo-list#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
+    "eslint": "^8.9.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.6",
     "sass": "^1.47.0",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.65.0",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.2"
   }
